...
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="comalexpolyanskyi.github.hwflagslanuchmode.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_main_head">
        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:orientation="vertical">
            <comalexpolyanskyi.github.hwflagslanuchmode.view.VectorImageTextView
                android:layout_width="match_parent"
...
                android:text="@string/show_info_str"
                style="@style/VectorImageTextViewStyleClickableV2"
                app:leftIcon ="@drawable/ic_dots" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="6dip"
            android:id="@+id/mesandphotobtn"
            android:layout_below="@id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:orientation="horizontal">
            <comalexpolyanskyi.github.hwflagslanuchmode.view.VectorImageTextView
...
